@@ -9,10 +9,13 @@ import (
 	"fmt"
 	"io"
 	"path/filepath"
+	"time"
 
 	"github.com/gofrs/uuid"
 	"gopkg.in/yaml.v2"
 
+	"github.com/elastic/beats/v7/libbeat/common/backoff"
+	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/agent/application/filelock"
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/agent/application/paths"
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/agent/errors"
 	"github.com/elastic/beats/v7/x-pack/elastic-agent/pkg/agent/storage"
@@ -29,6 +32,7 @@ const defaultAgentActionStoreFile = "action_store.yml"
 const defaultAgentStateStoreFile = "state.yml"
 
 const defaultLogLevel = "info"
+const maxRetriesloadAgentInfo = 5
 
 type persistentAgentInfo struct {
 	ID       string `json:"id" yaml:"id" config:"id"`
@@ -43,6 +47,14 @@ type ioStore interface {
 // AgentConfigFile is a name of file used to store agent information
 func AgentConfigFile() string {
 	return filepath.Join(paths.Config(), defaultAgentConfigFile)
+}
+
+// AgentConfigFileLock is a locker for agent config file updates.
+func AgentConfigFileLock() *filelock.AppLocker {
+	return filelock.NewAppLocker(
+		paths.Config(),
+		fmt.Sprintf("%s.lock", defaultAgentConfigFile),
+	)
 }
 
 // AgentCapabilitiesPath is a name of file used to store agent capabilities
@@ -62,7 +74,7 @@ func AgentStateStoreFile() string {
 
 // updateLogLevel updates log level and persists it to disk.
 func updateLogLevel(level string) error {
-	ai, err := loadAgentInfo(false, defaultLogLevel)
+	ai, err := loadAgentInfoWithBackoff(false, defaultLogLevel)
 	if err != nil {
 		return err
 	}
@@ -86,31 +98,6 @@ func generateAgentID() (string, error) {
 	}
 
 	return uid.String(), nil
-}
-
-func loadAgentInfo(forceUpdate bool, logLevel string) (*persistentAgentInfo, error) {
-	agentConfigFile := AgentConfigFile()
-	s := storage.NewDiskStore(agentConfigFile)
-
-	agentinfo, err := getInfoFromStore(s, logLevel)
-	if err != nil {
-		return nil, err
-	}
-
-	if agentinfo != nil && !forceUpdate && agentinfo.ID != "" {
-		return agentinfo, nil
-	}
-
-	agentinfo.ID, err = generateAgentID()
-	if err != nil {
-		return nil, err
-	}
-
-	if err := updateAgentInfo(s, agentinfo); err != nil {
-		return nil, errors.New(err, "storing generated agent id", errors.TypeFilesystem)
-	}
-
-	return agentinfo, nil
 }
 
 func getInfoFromStore(s ioStore, logLevel string) (*persistentAgentInfo, error) {
@@ -178,6 +165,19 @@ func updateAgentInfo(s ioStore, agentInfo *persistentAgentInfo) error {
 		return errors.New(err, "failed to unpack stored config to map")
 	}
 
+	// best effort to keep the ID
+	if agentInfoSubMap, found := configMap[agentInfoKey]; found {
+		if cc, err := config.NewConfigFrom(agentInfoSubMap); err == nil {
+			pid := &persistentAgentInfo{}
+			err := cc.Unpack(&pid)
+			if err == nil && pid.ID != agentInfo.ID {
+				// if our id is different (we just generated it)
+				// keep the one present in the file
+				agentInfo.ID = pid.ID
+			}
+		}
+	}
+
 	configMap[agentInfoKey] = agentInfo
 
 	r, err := yamlToReader(configMap)
@@ -194,4 +194,63 @@ func yamlToReader(in interface{}) (io.Reader, error) {
 		return nil, errors.New(err, "could not marshal to YAML")
 	}
 	return bytes.NewReader(data), nil
+}
+
+func loadAgentInfoWithBackoff(forceUpdate bool, logLevel string) (*persistentAgentInfo, error) {
+	var err error
+	var ai *persistentAgentInfo
+
+	signal := make(chan struct{})
+	backExp := backoff.NewExpBackoff(signal, 100*time.Millisecond, 3*time.Second)
+
+	for i := 0; i <= maxRetriesloadAgentInfo; i++ {
+		backExp.Wait()
+		ai, err = loadAgentInfo(forceUpdate, logLevel)
+		if err != filelock.ErrAppAlreadyRunning {
+			break
+		}
+	}
+
+	close(signal)
+	return ai, err
+}
+
+func loadAgentInfo(forceUpdate bool, logLevel string) (*persistentAgentInfo, error) {
+	idLock := AgentConfigFileLock()
+	if err := idLock.TryLock(); err != nil {
+		return nil, err
+	}
+	defer idLock.Unlock()
+
+	agentConfigFile := AgentConfigFile()
+	s := storage.NewDiskStore(agentConfigFile)
+
+	agentinfo, err := getInfoFromStore(s, logLevel)
+	if err != nil {
+		return nil, err
+	}
+
+	if agentinfo != nil && !forceUpdate && agentinfo.ID != "" {
+		return agentinfo, nil
+	}
+
+	if err := updateID(agentinfo, s); err != nil {
+		return nil, err
+	}
+
+	return agentinfo, nil
+}
+
+func updateID(agentInfo *persistentAgentInfo, s ioStore) error {
+	var err error
+	agentInfo.ID, err = generateAgentID()
+	if err != nil {
+		return err
+	}
+
+	if err := updateAgentInfo(s, agentInfo); err != nil {
+		return errors.New(err, "storing generated agent id", errors.TypeFilesystem)
+	}
+
+	return nil
 }
